--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build": "gulp build --production"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "bootstrap": "^4.5.0",
+    "date-fns": "^2.16.1",
     "gsap": "^3.4.0",
     "gulp-pug-i18n": "^1.0.2",
     "gulp-rename": "^2.0.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.10.4",
     "@babel/register": "^7.10.5",
     "autoprefixer": "^9.8.5",
@@ -45,6 +48,7 @@
     "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
+    "gulp-data": "^1.3.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
